# advent-of-code

2017/Day_1/: inv_captcha.py
2017/Day_2/: checksum.py
2017/Day_3/: spiral_mem.py
2017/Day_4/: passprases.py
2020/: .clang-format  CMakeLists.txt
2020/aoc_1/: main.c
2020/aoc_11/: aoc_11.zig
2020/aoc_3/: main.c
2020/aoc_4/: main.c
2020/aoc_5/: main.c
2020/aoc_6/: main.c
2020/aoc_7/: main.c
2020/aoc_8/: main.c
2020/aoc_lib/: aoc.c  aoc.h
Day_1/: inv_captcha.py  inv_captcha.rs
Day_2/: checksum.py
